--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.jar=${dist.dir}/XML_Encryptor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.FunkyDomino-src=../FunkyDomino/src
+file.reference.RSA.jar=libs/RSA.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.FunkyDomino-src}
+    ${file.reference.RSA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
